src-tauri/error2.txt
    Checking sabi v1.1.1 (C:\Users\bati-\OneDrive\Documents\AG-SysPro\src-tauri)
error[E0063]: missing fields `power_on_hours`, `read_errors`, `wear` and 1 other field in initializer of `DiskHealthInfo`
    --> src\lib.rs:4326:9
     |
4326 |         DiskHealthInfo {
     |         ^^^^^^^^^^^^^^ missing `power_on_hours`, `read_errors`, `wear` and 1 other field

warning: unused variable: `last_boot`
   --> src\lib.rs:557:9
    |
557 |     let last_boot = output.as_ref().ok()
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_last_boot`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0063`.
warning: `sabi` (lib) generated 1 warning
error: could not compile `sabi` (lib) due to 1 previous error; 1 warning emitted
